; ModuleID = '/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_stream.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.magic_set = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @magic_stream(%struct.magic_set* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.magic_set*, align 8
  %5 = alloca i32*, align 8
  store %struct.magic_set* %0, %struct.magic_set** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.magic_set*, %struct.magic_set** %4, align 8
  %7 = icmp eq %struct.magic_set* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %13

9:                                                ; preds = %2
  %10 = load %struct.magic_set*, %struct.magic_set** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i8* @file_or_stream(%struct.magic_set* %10, i32* null, i32* %11)
  store i8* %12, i8** %3, align 8
  br label %13

13:                                               ; preds = %9, %8
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i8* @file_or_stream(%struct.magic_set*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
